# rsuite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: configuration.rs  lib.rs  midiinput.rs  wavwriter.rs
src/effects/: mod.rs  smooth.rs
src/synth/: hardware.rs  mod.rs  wavetype.rs
src/synth/drum/: kick.rs  mod.rs  snare.rs
src/synth/rsynth/: configuration.rs  mod.rs  player.rs  ui.rs
src/utils/: activate.rs  metronome.rs  mod.rs  recorder.rs  transposer.rs
