[package]
authors = ["Benerjo <benerjo@gmail.com>"]
description = "A collection of programs to make musing using JACK."
edition = "2021"
license = "GPLv3"
name = "rsuite"
readme = "README.md"
version = "0.0.1"

[dependencies]
jack-sys = "0.5"
libc = "0.2"
jack = "0.13"
riff = "2.0"
eframe = "0.30.0"
egui_plot = "0.30.0"
chrono = "0.4"
rand = "0.8"

[[bin]]
name = "rsynth"
path = "src/bin/rsynth.rs"
[[bin]]
name = "mididebug"
path = "src/bin/mididebug.rs"
[[bin]]
name = "smooth"
path = "src/bin/smooth.rs"
[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"
[[bin]]
name = "kick"
path = "src/bin/kick.rs"
[[bin]]
name = "transposer"
path = "src/bin/transposer.rs"
[[bin]]
name = "metronome"
path = "src/bin/metronome.rs"

[features]
default = []
metadata = []
